fixed catalog row alignment, added footer and navbar global color vals to style.css

--- a/MusicStore/src/main/resources/static/css/style.css
+++ b/MusicStore/src/main/resources/static/css/style.css
@@ -101,4 +101,16 @@
 	 margin-left: 80%; 
 	 margin-right: 80%;
 }
+
+.nav {
+	background-color: #232a2e;
+}
+
+
+  footer {
+  text-align: center;
+  padding: 3px;
+  background-color: #232a2e;
+  color: white;
+}
 		    
